--- a/Plugins/API/OpenAPISpecs/GraphAPI-Specs.yaml
+++ b/Plugins/API/OpenAPISpecs/GraphAPI-Specs.yaml
@@ -3,7 +3,7 @@ openapi: 3.0.0
 info:
     title: Defender Specific Alert Details Plugin
     description: Skills for getting alert details via Graph API Call
-    version: "v1"
+    version: 'v1'
 servers:
     - url: https://graph.microsoft.com/v1.0/security
 
